Some compilers warning removed.